--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,21 @@ awscli = "*"
 flake8 = "*"
 python-dotenv = ">=0.5.1"
 Sphinx = "*"
+pandas = "*"
+numpy = "*"
+seaborn = "*"
+scikit-learn = "*"
+ipykernel = "*"
+jupyter = "*"
+jupyter-server = "*"
+optuna = "*"
+jupyter-kite = "*"
+jedi = "*"
+pyreadline = "*"
+wordcloud = "*"
+lightgbm = "*"
+catboost = "*"
+xgboost = "*"
 
 [requires]
 python_version = "3.7"
