--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,132 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+alabaster==0.7.12
+alembic==1.4.3
+argon2-cffi==20.1.0
+async-generator==1.10
+attrs==20.2.0
+awscli==1.18.144
+Babel==2.8.0
+backcall==0.2.0
+bleach==3.2.1
+botocore==1.18.3
+catboost==0.24.1
+certifi==2020.6.20
+cffi==1.14.3
+chardet==3.0.4
+click==7.1.2
+cliff==3.4.0
+cmaes==0.6.1
+cmd2==1.3.10
+colorama==0.4.3
+colorlog==4.2.1
+coverage==5.3
+cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.6.0
+docutils==0.15.2
+entrypoints==0.3
+flake8==3.8.3
+future==0.18.2
+graphviz==0.14.1
+idna==2.10
+imagesize==1.2.0
+importlib-metadata==2.0.0
+ipykernel==5.3.4
+ipython==7.18.1
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+jedi==0.17.2
+Jinja2==2.11.2
+jmespath==0.10.0
+joblib==0.16.0
+json5==0.9.5
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.7
+jupyter-console==6.2.0
+jupyter-core==4.6.3
+jupyter-kite==1.0.0
+jupyter-server==1.0.1
+jupyterlab==2.2.8
+jupyterlab-pygments==0.1.1
+jupyterlab-server==1.2.0
+kiwisolver==1.2.0
+lightgbm==3.0.0
+Mako==1.1.3
+MarkupSafe==1.1.1
+matplotlib==3.3.2
+mccabe==0.6.1
+mistune==0.8.4
+nbclient==0.5.0
+nbconvert==6.0.6
+nbformat==5.0.7
+nest-asyncio==1.4.0
+nodejs==0.1.1
+notebook==6.1.4
+numpy==1.19.2
+optional-django==0.1.0
+optuna==2.1.0
+packaging==20.4
+pandas==1.1.2
+pandocfilters==1.4.2
+parso==0.7.1
+pbr==5.5.0
+pickleshare==0.7.5
+Pillow==7.2.0
+plotly==4.10.0
+prettytable==0.7.2
+prometheus-client==0.8.0
+prompt-toolkit==3.0.7
+pyasn1==0.4.8
+pycodestyle==2.6.0
+pycparser==2.20
+pyflakes==2.2.0
+Pygments==2.7.1
+pyparsing==2.4.7
+pyperclip==1.8.0
+pyreadline==2.1
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+python-dotenv==0.14.0
+python-editor==1.0.4
+pytz==2020.1
+pywin32==228
+pywinpty==0.5.7
+PyYAML==5.3.1
+pyzmq==19.0.2
+qtconsole==4.7.7
+QtPy==1.9.0
+requests==2.24.0
+retrying==1.3.3
+rsa==4.5
+s3transfer==0.3.3
+scikit-learn==0.23.2
+scipy==1.5.2
+seaborn==0.11.0
+Send2Trash==1.5.0
+six==1.15.0
+snowballstemmer==2.0.0
+Sphinx==3.2.1
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
+SQLAlchemy==1.3.19
+-e git+https://github.com/christianvadillo/saturdaysai.git@0c02fce0301503aa949ca3e1222c23477d9e9062#egg=src
+stevedore==3.2.2
+terminado==0.9.1
+testpath==0.4.4
+threadpoolctl==2.1.0
+torch==1.6.0
+torchvision==0.7.0
+tornado==6.0.4
+tqdm==4.49.0
+traitlets==5.0.4
+urllib3==1.25.10
+wcwidth==0.2.5
+webencodings==0.5.1
+widgetsnbextension==3.5.1
+wordcloud==1.8.0
+xgboost==1.2.0
+zipp==3.2.0
